tests/diagnostics/catalog/snapshots/ir/IR0005.snap
error[IR0005]: IR_E_ASSIGNMENT_MISMATCH
 --> tests/diagnostics/catalog/sources/ir/IR0005.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0005
  = help: keep IR validation diagnostics structured and catalog-backed
